# vox3DSpace

./: .clang-format  .gitignore  README.md  renderingInfo.json  renderingStatus.json  vox3DSpace.cpp
space3d/: CMakeLists.txt  CMakeLists_backup.txt
space3d/assets/model/ctm/: box01.ctm  model01.ctm  tri01.ctm
space3d/cmake/: vox3dspace-config.cmake.template  vox3dspace.pc.template  vox3dspace_build_definitions.cmake  vox3dspace_executable_dx12dxrDemos.cmake  vox3dspace_executable_hpcDemos.cmake  vox3dspace_executable_multiprocessDemos.cmake  vox3dspace_executable_oglDemos.cmake  vox3dspace_executable_project.cmake  vox3dspace_executable_vkDemos.cmake  vox3dspace_flags.cmake  vox3dspace_install.cmake  vox3dspace_intrinsics.cmake  vox3dspace_libraries.cmake  vox3dspace_sanitizer.cmake  vox3dspace_sources.cmake  vox3dspace_targets.cmake
space3d/cmakeSubTest/: CMakeLists.txt
space3d/cmakeSubTest/geomsrc/: main.cc
space3d/cmakeSubTest/src/: main.cc
space3d/demos/boost/: baseTest.cc  baseTest.cpp
space3d/demos/ccplus/: ccplusMain.cc  testMain.cc
space3d/demos/ccplus/algorithm/: LRUTest.h  baseMethod1.h  testhash.h  testsort.h
space3d/demos/ccplus/base/: testClass.h  testConstexpr.h  testForward.h  testMacro.h  testMemory.h  testString.h  testTypeInfo.h  testUnit.cc  testUnit.h
space3d/demos/ccplus/coding/: testCodecvt.h
space3d/demos/ccplus/demoTemplate/: testTemplate.h  testTemplate02.h  testTemplate03.h  testTemplate04.h  testTemplate05.h  testTemplate06.h
space3d/demos/ccplus/exception1/: testExcptBase.h
space3d/demos/ccplus/msvcAsm/: testInlineAsm.h
space3d/demos/ccplus/other/: atomic01.cc  buggy.cc  disasm01.cc  showAsm01.cc
space3d/demos/ccplus/parallel/: baseNonLock.h  baseNonLock2.h  conditionAndLock.h  futureFastSort01.h  hardware.h  hazardPtr1.h  testExecutionPar.h  threadPool.h
space3d/demos/ccplus/thread/: testAsync.h  testAtomic.h  testAtomic2.h  testMemoryFence.h  testMemoryOrder.h  testMutex.h  testSyncConcurrent.h  testThrFuture.h
space3d/demos/ccwindows/: ccwindowsMain.cc  cl_test.cpp
space3d/demos/ccwindows/thread/: mutexMain.h  threadMain.h
space3d/demos/ctm/: ctmTest.cc
space3d/demos/cuda/: asyncAPI.cu
space3d/demos/directx11_rendering/: GameApp.cc
space3d/demos/directx11_rendering/hlsl/: cube_frag.cso  cube_vert.cso
space3d/demos/directx12/: D3D12HelloTriangle.cc  shaders.hshd
space3d/demos/json/: jsonTest.cc
space3d/demos/opengl/: Cloth.frag  colorTriMain.cc  oglTest.cc  player.cc  shader.cc
space3d/demos/opengl_binShader/: colorTri.frag  colorTri.frag.spv  colorTri.vert  colorTri.vert.spv  colorTriMain.cc  shader.cc  shader.h
space3d/demos/opengl_compute/: buffer.h  quad.h  renderer.h  shader.h  testMain.cc  texture.h  texv.frag  vertex_array_object.h
space3d/demos/opengl_rendering/: colorTriMain.cc  shader.cc
space3d/demos/tbb/: tbbAtomic.h  tbbAtomic2.h  testMain.cc  testMutex.h  testParallel.h  testTask.h
space3d/demos/tinyObj/: tinyObjTest.cc
space3d/demos/voxengine/: voxengineTest.cc
space3d/demos/vulkan/: vulkanTest.cc
space3d/demos/vulkan_compute/: computeMain.cc  computeMain.cpp  shader.bat
space3d/demos/vulkan_rendering/: renderingMain.cc
space3d/hpc/cpuparallel/: checkSSEAVX.cc  checkSSEAVX.h  checkSSEAVX2.cc  checkSSEAVX3.cc  checkSSEAVXLinuxOK.cc  checkSSEAVXLinuxOK_backup.cc  cpuparallel.cc  sseavxBaseTest.cc  sseavxBaseTest.h  sseavxBaseTest2.h  sseavxBaseTestSOA.h  sseavxChecker.h  sseavxFileReader.h
space3d/hpc/gpucpuparallel/: gpucpuparallel.cc
space3d/hpc/plthread/: plthread.cc  threadAffinity.h
space3d/libs/stb/lib/: STB_IMAGE.lib
space3d/libs/tbb/lib/: tbb12_debug.exp  tbb12_debug.lib
space3d/openglLibs/libx64/lib/: glew32d.lib  glfw3.lib
space3d/openglLibs/libx86/lib/: glew32d.lib
space3d/openglLibs/libx86_64/lib/: glew32d.lib
space3d/openglLibs/x86_64/lib/: glew32.lib  glfw3.lib
space3d/samples/cuda/cudaSample01/: CMakeLists.txt
space3d/samples/cuda/cudaSample02/: CMakeLists.txt  asyncAPI.cu  main.cu
space3d/src/common/base/: commonDef.h  preCompileDef.h
space3d/src/common/math/: Box.cc  Plane.cc  Ray.h  Sphere.h  TVecHelpers.h  mat2.h  mat4.h  math.h  mathutil.cc  mathutil.h  normal.h  vec2.h  vec3.h
space3d/src/voxengine/: vox3dspace_version.h
space3d/src/voxengine/math/: Euler.cc  Euler.h  EulerOrder.h  Float.h  IEuler.h  IMatrix4.h  Matrix4.cc  Matrix4.h  OBB.cc  OBB.h  mathDefine.h  vec2.cc  vec2.h  vec3.cc  vec3.h
space3d/src/voxengine/text/: BaseText.h
space3d/src/voxengine/view/: Camera.cc  Camera.h
space3d/testCases/dx12dxrDemos/accelerationStructure/: AccelerationStructure.cc  AccelerationStructure.h
space3d/testCases/dx12dxrDemos/basicShaders/: BasicShaders.cc  basicShaders.h
space3d/testCases/dx12dxrDemos/constantBuffer/: ConstantBuffer.cc  ConstantBuffer.h
space3d/testCases/dx12dxrDemos/createWindow/: CreateWindow.cc  CreateWindow.h
space3d/testCases/dx12dxrDemos/framework/: Framework.cc  Framework.cpp  Framework.h
space3d/testCases/dx12dxrDemos/initDXR/: InitDXR.cc  InitDXR.h
space3d/testCases/dx12dxrDemos/instancing/: Instancing.cc  Instancing.h
space3d/testCases/dx12dxrDemos/perGeometryHitShader/: PerGeometryHitShader.cc  PerGeometryHitShader.h
space3d/testCases/dx12dxrDemos/perInstanceConstantBuffer/: PerInstanceConstantBuffer.cc  PerInstanceConstantBuffer.h
space3d/testCases/dx12dxrDemos/raytrace/: Raytrace.cc  Raytrace.h
src/: CMakeLists.txt
src/cmake/: vox3dspace_build_definitions.cmake  vox3dspace_helpers.cmake  vox3dspace_targets.cmake
src/common/math/: BasePreCompiled.cpp  BasePreCompiled.h  Box.h  FCConfig.h  Plane.h  Ray.h  Sphere.h  TMatHelpers.h  half.h  mathutil.h  mdefine.h  scalar.h  vec2.h
src/demos/ctm/: ctmTest.cc
src/demos/directx11/: DXTrace.cc  Main.cc
src/demos/opengl/: Cloth.frag  Color.h  oglTest.cc  player.h
src/demos/profile/: logerTest.cc
src/demos/vulkan/: vulkanTest.cc
src/testProjs/logerTest/: logerTest.cpp
src/voxengine/math/: Euler.cc  Euler.h  Float.h  IEuler.h  Matrix4.cc  Matrix4.h  OBB.cc  OBB.h  vec3.cc  vec3.h
src/voxengine/view/: Camera.cc
(+145 files in other folders)
